[tool.poetry]
name = "fastapi-testtask"
version = "0.1.0"
description = "A-lex-Ra's test task, that is RESTful service on python."
authors = ["Lex <rastorguev2047@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "3.7.0"
attrs = "23.1.0"
build = "0.10.0"
cachecontrol = "0.12.14"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
cleo = "2.0.1"
click = "8.1.3"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.6"
dulwich = "0.21.5"
exceptiongroup = "1.1.1"
fastapi = "0.96.0"
filelock = "3.12.0"
h11 = "0.14.0"
html5lib = "1.1"
httptools = "0.5.0"
idna = "3.4"
importlib-metadata = "6.6.0"
installer = "0.7.0"
jaraco-classes = "3.2.3"
jsonschema = "4.17.3"
keyring = "23.13.1"
lockfile = "0.12.2"
more-itertools = "9.1.0"
msgpack = "1.0.5"
packaging = "23.1"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "3.5.1"
poetry = "1.5.1"
poetry-core = "1.6.1"
poetry-plugin-export = "1.4.0"
prettytable = "3.7.0"
ptyprocess = "0.7.0"
pydantic = "1.10.9"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
python-dotenv = "1.0.0"
pywin32-ctypes = "0.2.0"
pyyaml = "6.0"
rapidfuzz = "2.15.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.0.post1"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.27.0"
tomli = "2.0.1"
tomlkit = "0.11.8"
trove-classifiers = "2023.5.24"
typing-extensions = "4.6.3"
urllib3 = "1.26.16"
uvicorn = "0.22.0"
watchfiles = "0.19.0"
wcwidth = "0.2.6"
webencodings = "0.5.1"
websockets = "11.0.3"
zipp = "3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
